# openhanse

./: .gitignore  AGENTS.md  CONTEXT.md  INSPIRATIONS.md  PARSEME.md  README.html  README.md  Refactor.md
BuildSystem/: BuildContainerImage.sh  README.md
BuildSystem/Source/rust-linux/: Dockerfile
Docs/: WIP.md  index.html  privacy-policy.html  site.webmanifest
Docs/Background/: tunneling-nat-traversal-overview.html
Docs/Ideas/: SSH-And-Peer-Services.md
Docs/Website/: robots.txt  sitemap.xml
Docs/Wiki/: nat.html  p2p-tunneling-and-nat-traversal.html
Examples/Hub/: DeployHub.sh  README.md
Examples/Test/: RunTest.sh
Examples/Test-2/RustRunner/: README.md
Inspiration/: Alipay.md  Rustdesk.md
Projects/Network/: PARSEME.md  README.md
Roadmap/: FutureIdeas-SSH-And-Peer-Services.md  Phase1.md  Phase2.md  README.md
Source/Rust/Gateway/openhanse-gateway/: Cargo.toml
Source/Rust/Gateway/openhanse-gateway-core/: Cargo.toml
Source/Rust/Gateway/openhanse-gateway-core/src/: lib.rs
Source/Rust/Gateway/openhanse-gateway-web/: Cargo.toml
Source/Rust/Gateway/openhanse-gateway-web/assets/WebUI/: app.css  app.js
Source/Rust/Gateway/openhanse-gateway-web/assets/WebUI/components/: oh-log.js  oh-prompt.js  oh-shell.js  oh-status.js
Source/Rust/Gateway/openhanse-gateway-web/src/: lib.rs
Source/Rust/Shared/openhanse-protocol/: Cargo.toml
Source/openhanse-cli/: BuildOpenHanseCli.sh  README.md
Source/openhanse-core/src/: gateway.rs
Source/openhanse-core/src/hub/: mod.rs
Source/openhanse-core/src/model/: peer_model.rs
(+6 files in other folders)
