[package]
name = "openhanse_gateway_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
openhanse_protocol = { path = "../../Shared/openhanse-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
